Fix parallax scrolling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,6 @@ footer > a > i {
 	transform-style: preserve-3d;
 	overflow-x: hidden;
 	overflow-y: scroll;
-	-webkit-overflow-scrolling: touch;
 }
 
 #contentcontainer {
@@ -251,7 +250,7 @@ footer > a > i {
 	flex: 1 0 auto;
 	position: relative;
 	height: 100vh;
-	transform: translateZ(-2px) scale(3);
+	transform: translateZ(-3px) scale(4);
 	z-index: -1;
 	overflow: hidden;
 }
